--- a/css/style.css
+++ b/css/style.css
@@ -330,9 +330,6 @@ margin-top:0px;}
 
 /* MAKE BACKGROUND DIV CHANGE COLOR */
 
-#make-history-box:hover {
-    background-color: rgba(226, 140, 169, 1);
-}
 
 #make-history-box p{
 	margin-bottom: 10px;
@@ -445,6 +442,11 @@ h4 {
 
 /* BOUNDARY POPUP STUFF */
 
+#makeHistoryText{
+	font-weight:700;
+	font-size: 15px;
+}
+
 .item-key {
     color: rgb(255, 189, 0);
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -475,6 +477,11 @@ h4 {
 
 .item-link a{
 	margin-left: 5px;
+}
+
+
+#hint{
+	font-style:italic;
 }
 
 
