--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ h4 {
     font-size: 14px;
     line-height: 24px;
     width: auto;
-    height: 300px;
+    max-height: 300px;
 	overflow-x:auto;
 	overflow-y:none;
 }
