--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h1 {
     text-decoration: none;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    color:rgb(80,80,80);
+    color: rgb(80, 80, 80);
 }
 
 /* DATA MENU ITEM STYLING */
@@ -139,11 +139,6 @@ h1 {
     font-weight: 400;
     color: rgb(255, 189, 0);
 }
-
-
-
-
-
 
 
 
@@ -178,14 +173,14 @@ h1 {
 
 .modal-content {
     background-color: rgba(0, 0, 0, .9);
-	color: white;
-	max-width:650px;
-	border-radius: 8px;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 300;
+    color: white;
+    max-width: 650px;
+    border-radius: 8px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
     font-size: 16px;
-	line-height: 24px;
-	overflow-x: auto;
+    line-height: 24px;
+    overflow-x: auto;
     overflow-y: none;
     /* 15% FROM THE TOP AND CENTERED */
     margin: 15% auto;
@@ -193,18 +188,18 @@ h1 {
     width: 80%;
 }
 
-.custom-header{
-	color:#ffbd00;
-	font-weight:300;
-	font-size:24px;
-	padding-left:none;
-	margin-left:none !impportant;
+.custom-header {
+    color: #ffbd00;
+    font-weight: 300;
+    font-size: 24px;
+    padding-left: none;
+    margin-left: none !impportant;
 }
 
 .modal a:link {
-	font-size:16px !important;
-	color:background-color: rgb(226, 140, 169) !important;
-}	
+    font-size: 16px !important;
+    color: background-color: rgb(226, 140, 169) !important;
+}
 
 
 
@@ -337,11 +332,11 @@ h1 {
     font-size: 20px;
     text-decoration: none;
     box-shadow: 0 0 2px 2px #707070;
-    
+
 }
 
-#make-history-box li{
-	margin-left: .75em;
+#make-history-box li {
+    margin-left: .75em;
 }
 
 
@@ -349,7 +344,7 @@ h1 {
 
 #make-history-box p {
     margin-bottom: 10px;
-	line-height:1.3em;
+    line-height: 1.3em;
 }
 
 /* STYLE MAKE HISTORY TEXT */
@@ -586,17 +581,17 @@ h4 {
     h1 {
         font-size: 38px;
     }
-	
-  #opacity-slider {
-		display: none;
-	}
 
-	#make-history-box {
-		top:7.25em;
-	}
-			
-		
-	
+    #opacity-slider {
+        display: none;
+    }
+
+    #make-history-box {
+        top: 7.25em;
+    }
+
+
+
 }
 
 @media (max-width: 1320px) {
@@ -639,11 +634,7 @@ h4 {
         h1 {
             font-size: 26px;
         }
-
-       
-
     }
-
 
     @media (max-width: 900px) {}
 
@@ -660,8 +651,6 @@ h4 {
         }
     }
 
-    
-
     /* MAKE MENU BUTTONS SMALLER AS PORT GETS SMALLER */
     @media (max-width: 946px) {
         h1 {
@@ -674,10 +663,10 @@ h4 {
             padding-right: 50px;
             padding-top: 1em;
         }
-		
-		top-buttons{
-			width:auto;
-		}
+
+        top-buttons {
+            width: auto;
+        }
 
         #data-button {
             float: right;
@@ -720,9 +709,9 @@ h4 {
     /**********************************************************************/
     /* PHONE SCREEN SIZES (600px OR LESS) */
     @media (max-width: 600px) {
-		
-		
-		 .leaflet-control-layers {
+
+
+        .leaflet-control-layers {
             background: rgba(255, 255, 255, 1);
             box-shadow: 0 0 2px 2px #707070;
             font-size: 16px;
@@ -766,10 +755,7 @@ h4 {
             float: left;
         }
 
-  
-		
-		
-
+        
         /* POPUP STUFF */
         .custom-popup .leaflet-popup-content-wrapper {
             background-color: rgba(0, 0, 0, .80);
@@ -785,20 +771,20 @@ h4 {
             max-height: 100px;
             bottom: 5px;
         }
-		
-		
-		.item-link {
-			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-			margin-top: 12px;
-			padding: 3px 3px 3px 3px;
-			margin-bottom: 12px;
-			font-weight: bold;
-			background-color: rgba(255, 189, 0, .95);
-			border-radius: 4px;
-			cursor: pointer;
-			height: 2.7em;
-			width: auto;
-		}
+
+
+        .item-link {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            margin-top: 12px;
+            padding: 3px 3px 3px 3px;
+            margin-bottom: 12px;
+            font-weight: bold;
+            background-color: rgba(255, 189, 0, .95);
+            border-radius: 4px;
+            cursor: pointer;
+            height: 2.7em;
+            width: auto;
+        }
 
         .leaflet-popup {
             margin-top: 20px;
@@ -818,7 +804,7 @@ h4 {
             top: 3.5em;
         }
 
-        
+
         /* DIFFERENT FORMATTING OF HEADER TITLE ON MOBILE */
         #title {
             display: none;
@@ -828,7 +814,7 @@ h4 {
             display: block;
         }
 
-        
+
         /* STYLING MENU ITEMS */
         .mobile-buttons {
             width: 6em;
